tests/ok/generic1/i1.ti
interface i1 {
  defines command void f();
}
